--- a/index.html
+++ b/index.html
@@ -9,40 +9,33 @@
   <body>
     <h1>Medical Escape Room</h1>
     <main class="game-container">
-      <section class="patient-panel">
-        <img src="patient.png" alt="patient" class="patient-img" />
-        <p class="symptom-text">patient:"I feel...."</p>
-      </section>
+      <div class="content">
+        <section class="patient-panel">
+          <img src="patient.png" alt="patient" class="patient-img" />
+          <p class="symptom-text">patient:"I feel...."</p>
+        </section>
+        <!-- Drop Zone -->
+        <section class="dropzone-panel">
+          <p>pick wisely...</p>
+          <div class="dropzones">
+            <div class="dropzone">Drop zone 1</div>
+          </div>
+        </section>
+      </div>
 
       <!-- draggable -->
 
       <section class="items-panel">
-        <h3>draggable items</h3>
-        <div class="item-grid">
-          <div class="item">X-ray 1</div>
-        </div>
-      </section>
+        <!-- <h3>draggable items</h3> -->
 
-      <!-- Drop Zone -->
-      <section class="dropzone-panel">
-        <p>pick wisely...</p>
-        <div class="dropzones">
-          <div class="dropzone">Drop zone 1</div>
-        </div>
+        <div class="item-grid"></div>
+        <div class="item-grid"></div>
+        <div class="item-grid"></div>
+        <div class="item-grid"></div>
+        <div class="item-grid"></div>
+        <div class="item-grid"></div>
+        <div class="item-grid"></div>
       </section>
     </main>
-
-    <!-- <div class="game-container">
-      <div class="case-box">
-        <h2>case 1</h2>
-        <p>"symptom: Doc, I have....."</p>
-        <div id="drop-zone" class="drop-zone">
-          <p>Drop correct item here</p>
-        </div>
-      </div>
-    </div>
-    <p id="p1" draggable="true">This element is draggable</p>
-  <!-- </body> -->
-    -
   </body>
 </html>
