--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
     <main class="game-container">
       <div class="content">
         <section class="patient-panel">
-          <p class="symptom-text">
-            Patient: I fell while playing soccer and my arm hurts
-          </p>
           <img src="images/Patient 1.jpg" alt="patient" class="patient-img" />
+          <p class="symptom-text">
+            patient:I fell while playing soccer and my arm hurts" >
+          </p>
         </section>
         <!-- Drop Zone -->
         <section class="dropzone-panel">
           <p>Pick wisely, my health depends on you, doc!</p>
           <div class="dropzones">
-            <div class="dropzone" id="zone1">Drop zone 1</div>
-            <div class="dropzone" id="zone2">Drop zone 2</div>
-            <div class="dropzone" id="zone3">Drop zone 1</div>
+            <div class="dropzone"></div>
+            <div class="dropzone"></div>
+            <div class="dropzone"></div>
+          </div>
+          <div id="message-box" class="message-box">
+            Drag an item to the correct box!
           </div>
         </section>
       </div>
@@ -34,68 +37,76 @@
 
         <div class="item-grid">
           <img
+            id="item-ballon"
             src="images/ballon.jpg"
             alt="ballon"
-            class="ballon"
+            class="draggable"
             draggable="true"
             data-answer="wrong"
           />
         </div>
         <div class="item-grid">
           <img
+            id="item-banana"
             src="images/banana.jpg"
             alt="banana"
-            class="banana"
+            class="draggable"
             draggable="true"
             data-answer="wrong"
           />
         </div>
         <div class="item-grid">
           <img
+            id="item-hammer"
             src="images/hammer.png"
             alt="hammer"
-            class="hammer"
+            class="draggable"
             draggable="true"
             data-answer="wrong"
           />
         </div>
         <div class="item-grid">
           <img
+            id="item-icecream"
             src="images/ice-cream.jpg"
             alt="ice-cream"
-            class="ice-cream"
+            class="draggable"
             draggable="true"
             data-answer="wrong"
           />
         </div>
         <div class="item-grid">
           <img
+            id="item-pill"
             src="images/pill.jpg"
             alt="pill"
-            class="pill"
+            class="draggable"
             draggable="true"
             data-answer="true"
           />
         </div>
         <div class="item-grid">
           <img
+            id="item-xray"
             src="images/x-ray.jpg"
             alt="x-ray"
-            class="x-ray"
+            class="draggable"
             draggable="true"
-            data-answer="wrong"
+            data-answer="true"
           />
         </div>
         <div class="item-grid">
           <img
+            id="item-cast"
             src="images/cast.jpg"
             alt="cast"
-            class="cast"
+            class="draggable"
             draggable="true"
             data-answer="true"
           />
         </div>
       </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
