--- a/patient3.html
+++ b/patient3.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <audio controls autoplay>
+    <source src="audio/chest.mp3" type="audio/mpeg" />
+    Your browser does not support the audio element.
+  </audio>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
