Adding <div class=cases>with<div class> for each case

--- a/cases.html
+++ b/cases.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Select a Case</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h2>Choose a Patient Case</h2>
+    <div class="cases">
+      <div class="case-box pic1" onclick="goToCase(1)">Soccer Injury</div>
+      <div class="case-box pic2" onclick="goToCase(2)">Fainting Girl</div>
+      <div class="case-box pic3" onclick="goToCase(3)">Chest Pain</div>
+    </div>
+    <script src="script.js"></script>
+  </body>
+</html>
