--- a/patient2.html
+++ b/patient2.html
@@ -112,6 +112,7 @@
         </div>
       </section>
     </main>
+    <button onclick="history.back()">Go Back</button>
     <script src="script.js"></script>
   </body>
 </html>
