--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Medical Escape Room</title>
   </head>
   <body>
     <h1>Medical Escape Room</h1>
-    <p>
-      You wake up inside a deserted hospital.<br />Patients are waiting, and
-      their survival depends on your choices.
-    </p>
-    <button onclick="startGame()">Start Game</button>
+    <a href="./cases.html"> <button>Start Game</button></a>
+
     <script src="script.js"></script>
   </body>
 </html>
