--- a/patient1.html
+++ b/patient1.html
@@ -4,18 +4,36 @@
     <source src="audio/soccer.mp3" type="audio/mpeg" />
     Your browser does not support the audio element.
   </audio>
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Case 1 - Soccer Injury</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <script>
+      localStorage.removeItem("caseDone")
+    </script>
+
+    <h2 id="score-display">Score: 0</h2>
     <h1>Case 1: Soccer Injury</h1>
     <p>
-      A 12-year-old boy fell while playing soccer. His arm hurts badly. Choose
-      the right tools to help him.
+      A 12-year-old boy fell while playing soccer.<br />
+      His arm hurts badly. Choose the right tools to help him.
     </p>
 
     <main class="game-container">
@@ -92,6 +110,16 @@
         </div>
         <div class="item-grid">
           <img
+            id="item-ps5"
+            src="images/ps5.jpg"
+            alt="ps5"
+            class="draggable"
+            draggable="true"
+            data-answer="wrong"
+          />
+        </div>
+        <div class="item-grid">
+          <img
             id="item-xray"
             src="images/x-ray fracture.jpg"
             alt="x-ray"
@@ -114,5 +142,9 @@
     </main>
     <button onclick="history.back()">Go Back</button>
     <script src="script.js"></script>
+    <script>
+      document.getElementById("score-display").textContent =
+        "Score: " + getScore()
+    </script>
   </body>
 </html>
