Add GIF, a restart button and post MVP touches

--- a/cases.html
+++ b/cases.html
@@ -19,7 +19,8 @@
       Patient case to heal, Every correct case gives you 10 points!
     </p>
     <h2 id="score-display">Score: 0</h2>
-    <h2 id="victory-message"></h2>
+    <button id="restart-button">Restart Game</button>
+
     <div class="cases">
       <div class="case-box pic1" onclick="goToCase(1)">Soccer Injury</div>
 
