--- a/patient3.html
+++ b/patient3.html
@@ -137,6 +137,15 @@
           />
         </div>
       </section>
+      <div class="gif">
+        <p class="win-text"></p>
+        <img
+          id="GIF-right"
+          src="https://media1.tenor.com/m/wqMW27pCgQUAAAAC/ocrp-mr-bean.gif"
+          alt="gif"
+          class="GIF-right"
+        />
+      </div>
     </main>
     <button onclick="history.back()">Go Back</button>
     <script src="script.js"></script>
